--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,15 +5,34 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+.container {
+    position: relative;
+    top: 50px;
+	max-width: 1400px;
+}
+
 .custom-navbar{
     position: fixed;
     width: 100%;
-    background: rgba(16, 17, 16, 0.5);
-    /* opacity: 0.8; */
-    /* background: transparent !important; */
     height: 50px;
     padding: 0 10%;
     z-index: 10;
+}
+
+.navbar-brand{
+    font-size: 25px;
+}
+
+.nav-item a{
+    font-size: 20px;
+}
+
+.home-page-navbar{
+    background: rgba(16, 17, 16, 0.5);
+}
+
+.other-page-navbar{
+    background-color: rgb(39, 19, 19);
 }
 
 .dropdown-menu{
@@ -32,6 +51,14 @@ body{
     color: #cce7ca;
 }
 
+.search-bar{
+    top: 100px;
+    width: 100%;
+}
+
+
+/* home.html starts */
+
 .background-image-div{
     position: relative;
     background: -webkit-linear-gradient(left, 
@@ -43,11 +70,6 @@ body{
 }
 
 .cover-image{
-    width: 100%;
-}
-
-.search-bar{
-    top: 100px;
     width: 100%;
 }
 
@@ -65,3 +87,5 @@ body{
     /* color: #6e6e6e; */
     text-shadow: 1px 1px 1px #837f7f, 2px 2px 2px rgb(0, 0, 0);
 }
+
+/* home.html ends */
