--- a/book/templates/book/admin_page.html
+++ b/book/templates/book/admin_page.html
@@ -25,7 +25,7 @@
                                     <img src="{% static 'images/add_book.jpg' %}" alt="">
                                 </div>
                                 <div class="card-text pt-3 justify-content-center d-flex">
-                                    <p><span>Add and Update Books</span></p>
+                                    <p><span>Books</span></p>
                                 </div>
 
                                 <!--Hover effect starts-->
@@ -56,7 +56,7 @@
                                     <img src="{% static 'images/add-author.jpg' %}" alt="">
                                 </div>
                                 <div class="card-text pt-3 justify-content-center d-flex">
-                                    <p><span>Add and Update Authors</span></p>
+                                    <p><span>Authors</span></p>
                                 </div>
 
                                 <!--Hover effect starts-->
@@ -64,7 +64,7 @@
                                 <div class="card-overlay">
                                     <div class="overlay col-12">
                                         <div class="btn-div btn-add-div col-8 mx-auto pb-2">
-                                            <button class="btn btn-updates" type="button"><a href="{% url 'add_book' %}"></a></button>
+                                            <button class="btn btn-updates" type="button"><a href="{% url 'add_book' %}">Add</a></button>
                                         </div>
 
                                         <div class="btn-div col-8 mx-auto pb-2">
@@ -89,7 +89,7 @@
                                     <img src="{% static 'images/add-genre.jpg' %}" alt="">
                                 </div>
                                 <div class="card-text pt-3 justify-content-center d-flex">
-                                    <p><span>Add and Update Genres</span></p>
+                                    <p><span>Genres</span></p>
                                 </div>
 
                                 <!--Hover effect starts-->
@@ -120,7 +120,7 @@
                                     <img src="{% static 'images/add-user.png' %}" alt="">
                                 </div>
                                 <div class="card-text pt-3 justify-content-center d-flex">
-                                    <p><span>Add and Update Customers</span></p>
+                                    <p><span>Customers</span></p>
                                 </div>
 
                                 <!--Hover effect starts-->
