--- a/static/css/add_book.css
+++ b/static/css/add_book.css
@@ -6,6 +6,138 @@
 }
 
 .book-info{
+    margin-top: 30px;
     padding-left: 200px;
     padding-right: 200px;
+}
+
+.btn-general{
+    width: 100%;
+    color: #ffffff;
+    border-color: transparent;
+    background-color: rgb(44, 21, 21);
+}
+
+.btn-general:hover{
+    color: rgb(255, 255, 255) !important;
+    background: rgb(0, 0, 0) !important;
+}
+
+.btn-add-books{
+    width: 100%;
+    color: #ffffff;
+    border-color: transparent;
+    background-color: rgb(43, 3, 3);
+}
+
+.btn-add-books:hover{
+    color: rgb(255, 255, 255) !important;
+    background: rgb(58, 167, 54) !important;
+}
+
+.btn-remove-books{
+    width: 100%;
+    color: #ffffff;
+    border-color: transparent;
+    background-color: rgb(182, 0, 0);
+}
+
+.btn-remove-books:hover{
+    color: rgb(221, 214, 214) !important;
+    background: rgb(223, 0, 0) !important;
+}
+
+/* Modal Popup starts */
+.add-success-modal{
+    position: absolute;
+	height: 265px;
+    width: 300px;
+	background-color: rgb(58, 23, 23);
+	border-radius: 20px;
+	top: 50px;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(0.1);
+	text-align: center;
+	padding: 0 30px 30px;
+	z-index: 999;
+	visibility: hidden;
+	transition: 0.3s;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.4),14px 10px 15px -3px rgba(0,0,0,0.4);
+}
+
+.add-success-show{
+	top: 20%;
+	transform: translate(-50%, -50%) scale(1);
+    transition: 0.3s;
+}
+
+.add-success-modal .add-success-text{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: rgba(24, 4, 4, 0.9);
+}
+
+.add-success-modal .add-success-text h2{
+    align-items: center !important;
+    justify-content: center !important;
+    color: rgb(243, 239, 239);
+    padding-top: 5px;
+}
+
+.add-success-modal .fa-xmark{
+    position: absolute;
+    top: 25px;
+    right: 15px;
+    font-size: 25px;
+    color: rgb(192, 192, 192);
+    cursor: pointer;
+}
+
+.add-success-modal img{
+	width: 100px;
+	margin-top: -35px;
+	border-radius: 50%;
+	box-shadow: 0 4px 4px rgba(54, 54, 54, 0.8);
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.4),14px 10px 15px -3px rgba(0,0,0,0.4);
+}
+
+/* Modal Popup ends */
+
+@media (max-width: 1094px) {
+    .dynamic-input-field{
+        width: 80%;
+    }
+
+    .dynamic-add-remove-btns{
+        width: 10%;
+    }
+}
+
+@media (max-width: 850px) {
+    .add-book-heading{
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+
+    .book-info{
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+}
+
+@media (max-width: 972px) {
+    .add-book-heading{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .book-info{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
