--- a/static/css/admin_page.css
+++ b/static/css/admin_page.css
@@ -19,7 +19,7 @@
 .card-inner{
     position: relative;
     border-radius: inherit;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1),14px 10px 15px -3px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.2),14px 10px 15px -3px rgba(0,0,0,0.2);
     transition: 0.3s;
 }
 
@@ -66,6 +66,7 @@
     transform: scale(1.12);
     transition: 0.3s;
     z-index: 99;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.5),14px 10px 15px -3px rgba(0,0,0,0.5);
 }
 
 .card-inner:hover .card-overlay{
@@ -75,6 +76,8 @@
 }
 
 .btn-div a{
+    display: block;
+    width: 100%;
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
