--- a/book/templates/book/main.html
+++ b/book/templates/book/main.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 {% load static %}
 <html lang="en">
 
@@ -49,7 +49,7 @@
                                 <div class="col-lg-6 w-100">
                                     <form action="">
                                         <div class="input-group">
-                                            <input type="search" placeholder="Search for Books and Authors" class="form-control">
+                                            <input type="search" placeholder="Search for Books and Authors" id="tags" class="form-control">
                                             <div class="input-group-append">
                                                 <!-- Example single danger button -->
                                                 <div class="btn-group">
@@ -93,10 +93,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
     </script>
+
+    
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    
 
     <script type="text/javascript">
         $(document).ready(function(){
@@ -108,6 +117,10 @@
             else{
                 $('#custom-nav').addClass('other-page-navbar')
             }
+        });
+
+        $( "#tags" ).autocomplete({
+            source: "{% url 'book_search' %}",
         });
     </script>
 </body>
