--- a/static/css/add_book.css
+++ b/static/css/add_book.css
@@ -56,7 +56,7 @@
 	border-radius: 20px;
 	top: 50px;
 	left: 50%;
-	transform: translate(-50%, -50%) scale(0.1);
+	transform: translate(-50%, -50%) scale(0);
 	text-align: center;
 	padding: 0 30px 30px;
 	z-index: 999;
@@ -69,6 +69,7 @@
 	top: 20%;
 	transform: translate(-50%, -50%) scale(1);
     transition: 0.3s;
+    visibility: visible;
 }
 
 .add-success-modal .add-success-text{
